--- a/config/hotfire_pressures_window.jsonc
+++ b/config/hotfire_pressures_window.jsonc
@@ -36,6 +36,12 @@
 					"color": [0, 255, 0]
 				},
 				{
+					"field": "pt1.ptValue7",
+					"name": "Ethane Tank PT 2",
+					"units": "PSI",
+					"color": [0, 255, 255]
+				},
+				{
 					"field": "pt1.ptValue5",
 					"name": "Ethane Fill Line PT",
 					"units": "PSI",
@@ -70,8 +76,13 @@
 					"field": "pt1.ptValue4", 
 					"name": "Ethane Tank PT",
 					"units": "PSI"
+				},
+				{
+					"field": "pt1.ptValue7",
+					"name": "Ethane Tank PT 2",
+					"units": "PSI"
 				}
-				
+	
 			]
 		},
 		{
