--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -23,17 +23,23 @@
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "pt1.ptValue4",
+				// 	"name": "Ethane Tank PT",
+				// 	"units": "PSI",
+				// 	"color": [0, 255, 0]
+				// },
+				// {
+				// 	"field": "pt1.ptValue5",
+				// 	"name": "Ethane Fill Line PT",
+				// 	"units": "PSI",
+				// 	"color": [0, 0, 255]
+				// },
 				{
-					"field": "pt1.ptValue4",
-					"name": "Ethane Tank PT",
+					"field": "pt1.ptValue7",
+					"name": "Ethane Tank PT 2",
 					"units": "PSI",
-					"color": [0, 255, 0]
-				},
-				{
-					"field": "pt1.ptValue5",
-					"name": "Ethane Fill Line PT",
-					"units": "PSI",
-					"color": [0, 0, 255]
+					"color": [255, 0, 255]
 				}
 			]
 		},
@@ -51,7 +57,7 @@
 					"units": "PSI/s"
 				},
 				{
-					"field": "tc1.tcValue2", //same
+					"field": "tc1.tcValue7", //same
 					"name": "Ethane Injector TC",
 					"units": "C"
 				},
@@ -64,23 +70,40 @@
 					"field": "pt1.ptValue4", 
 					"name": "Ethane Tank PT",
 					"units": "PSI"
+				},
+				{
+					"field": "pt1.ptValue7",
+					"name": "Ethane Tank PT 2",
+					"units": "PSI"
 				}
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "lc1.lcValue0",
+				// 	"name": "Nitrous LC 0",
+				// 	"units": "lbs",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "lc1.lcValue1",
+				// 	"name": "Nitrous LC 1",
+				// 	"units": "LB",
+				// 	"color": [0, 255, 0]
+				// }
 				{
-					"field": "lc1.lcValue0",
-					"name": "Nitrous LC 0",
-					"units": "lbs",
-					"color": [255, 0, 0]
+					"field": "pt1.ptValue3",
+					"name": "Ethane Injector PT",
+					"units": "PSI",
+					"color": [0, 255, 0]
 				},
 				{
-					"field": "lc1.lcValue1",
-					"name": "Nitrous LC 1",
-					"units": "LB",
-					"color": [0, 255, 0]
+					"field": "pt1.ptValue6",
+					"name": "Ethane Injector PT 2",
+					"units": "PSI",
+					"color": [255, 0, 255]
 				}
 			]
 		},
@@ -137,14 +160,14 @@
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "tc1.tcValue1",
+				// 	"name": "Nitrous Tank TC",
+				// 	"units": "C",
+				// 	"color": [255, 0, 0]
+				// },
 				{
 					"field": "tc1.tcValue0",
-					"name": "Nitrous Tank TC",
-					"units": "C",
-					"color": [255, 0, 0]
-				},
-				{
-					"field": "tc1.tcValue1",
 					"name": "Ethane Tank TC",
 					"units": "C",
 					"color": [0, 255, 0]
@@ -166,12 +189,12 @@
 				// 	"units": "PSI",
 				// 	"color": [0, 255, 0]
 				// }
-				{
-					"field": "cap.fuelCapVal",
-					"name": "Nitrous Cap Fill Value",
-					"units": "pF",
-					"color": [255, 0, 0]
-				},
+				// {
+				// 	"field": "cap.fuelCapVal",
+				// 	"name": "Nitrous Cap Fill Value",
+				// 	"units": "pF",
+				// 	"color": [255, 0, 0]
+				// },
 				{
 					"field": "cap.loxCapVal",
 					"name": "Ethane Cap Fill Value",
