--- a/config/coldflow_pressurization_window.jsonc
+++ b/config/coldflow_pressurization_window.jsonc
@@ -1,8 +1,447 @@
+// {
+// 	// "pt1.ptValue0": "ethaneFillPT",
+// 	// "pt1.ptValue1@rtd": "ethaneTankRTD",
+// 	// "pt1.ptValue2": "ethaneTankPT", 
+// 	// "pt1.ptValue3": "nitrousFillPT", 
+// 	// "pt1.ptValue4@rtd": "nitrousTankRTD", 
+// 	// "pt1.ptValue5": "nitrousTankPT",
+// 	"name": "Coldflow Pressures",
+// 	"layout": "9-grid",
+// 	"slots": [
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt1.ptValue0",
+// 					"name": "Nitrous Tank PT",
+// 					"units": "PSI",
+// 					"color": [255, 0, 0]
+// 				},
+// 				{
+// 					"field": "pt1.ptValue1",
+// 					"name": "Nitrous Fill Line PT",
+// 					"units": "PSI",
+// 					"color": [255, 0, 255]
+// 				}
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt1.ptValue4",
+// 					"name": "Ethane Tank PT",
+// 					"units": "PSI",
+// 					"color": [0, 255, 0]
+// 				},
+// 				{
+// 					"field": "pt1.ptValue7",
+// 					"name": "Ethane Tank PT 2",
+// 					"units": "PSI",
+// 					"color": [0, 255, 255]
+// 				},
+// 				{
+// 					"field": "pt1.ptValue5",
+// 					"name": "Ethane Fill Line PT",
+// 					"units": "PSI",
+// 					"color": [0, 0, 255]
+// 				}
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "six-square",
+// 			"values": [
+// 				{
+// 					"field": "pt1.ptValue0@roc", //don't know if works yet 
+// 					"name": "Nitrous Tank roc",
+// 					"units": "PSI/s"
+// 				},
+// 				{
+// 					"field": "pt1.ptValue4@roc", //same
+// 					"name": "Ethane Tank roc",
+// 					"units": "PSI/s"
+// 				},
+// 				{
+// 					"field": null 
+					
+// 				},
+// 				{
+// 					"field": "pt1.ptValue0", 
+// 					"name": "Nitrous Tank PT",
+// 					"units": "PSI"
+// 				},
+// 				{
+// 					"field": "pt1.ptValue4", 
+// 					"name": "Ethane Tank PT",
+// 					"units": "PSI"
+// 				},
+// 				{
+// 					"field": "pt1.ptValue7",
+// 					"name": "Ethane Tank PT 2",
+// 					"units": "PSI"
+// 				}
+	
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt1.ptValue2",
+// 					"name": "Nitrous Injector PT",
+// 					"units": "PSI",
+// 					"color": [255, 0, 0]
+// 				},
+// 				{
+// 					"field": "pt1.ptValue6",
+// 					"name": "Ethane Injector PT",
+// 					"units": "PSI",
+// 					"color": [0, 255, 0]
+// 				}
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt2.ptValue2",
+// 					"name": "Chamber PT",
+// 					"units": "PSI",
+// 					"color": [0, 0, 255]
+// 				}
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt2.ptValue4",
+// 					"name": "Channel PT0",
+// 					"units": "PSI",
+// 					"color": [255, 0, 0]
+// 				},
+// 				{
+// 					"field": "pt2.ptValue5",
+// 					"name": "Channel PT1",
+// 					"units": "PSI",
+// 					"color": [0, 255, 0]
+// 				},
+// 				{
+// 					"field": "pt2.ptValue6",
+// 					"name": "Channel PT2",
+// 					"units": "PSI",
+// 					"color": [0, 0, 255]
+// 				},
+// 				{
+// 					"field": "pt2.ptValue7",
+// 					"name": "Channel PT3",
+// 					"units": "PSI",
+// 					"color": [0, 255, 255]
+// 				}
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				// {
+// 				// 	"field": "pt1.ptValue1",
+// 				// 	"name": "Nitrous Fill Line PT",
+// 				// 	"units": "PSI",
+// 				// 	"color": [255, 0, 0]
+// 				// }
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				// {
+// 				// 	"field": "pt1.ptValue0",
+// 				// 	"name": "Ethane Fill Line PT",
+// 				// 	"units": "PSI",
+// 				// 	"color": [255, 0, 0]
+// 				// }
+		
+// 			]
+// 		},
+// 		{
+// 			"type": "graph",
+// 			"values": [
+// 				{
+// 					"field": "pt2.ptValue3",
+// 					"name": "Manifold PT",
+// 					"units": "PSI",
+// 					"color": [255, 0, 0]
+// 				}
+		
+// 			]
+// 		}
+		
+// 	]
+// }
+
 {
-	"name": "Coldflow Pressurization",
+	"name": "Prop Fill 3",
 	"layout": "9-grid",
 	"slots": [
 		{
-		}
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "pt1.ptValue0",
+				// 	"name": "Nitrous Tank PT",
+				// 	"units": "PSI",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "pt1.ptValue1",
+				// 	"name": "Nitrous Fill Line PT",
+				// 	"units": "PSI",
+				// 	"color": [255, 0, 255]
+				// }
+				{
+					"field": "pt1.ptValue4@filtered",
+					"name": "ETH Tank PT Avg",
+					"units": "PSI",
+					"color": [2, 173, 128]
+				},
+				{
+					"field": "pt1.ptValue7@filtered",
+					"name": "ETH Tank PT 2 Avg",
+					"units": "PSI",
+					"color": [2, 76, 235]
+				},
+				{
+					"field": "pt1.ptValue5@filtered",
+					"name": "ETH Fill Line PT Avg",
+					"units": "PSI",
+					"color": [91, 1, 148]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "pt1.ptValue4@filtered",
+				// 	"name": "ETH Tank PT Avg",
+				// 	"units": "PSI",
+				// 	"color": [2, 173, 128]
+				// },
+				// {
+				// 	"field": "pt1.ptValue7@filtered",
+				// 	"name": "ETH Tank PT 2 Avg",
+				// 	"units": "PSI",
+				// 	"color": [2, 76, 235]
+				// },
+				// {
+				// 	"field": "pt1.ptValue5@filtered",
+				// 	"name": "ETH Fill Line PT Avg",
+				// 	"units": "PSI",
+				// 	"color": [91, 1, 148]
+				// },
+				{
+					"field": "pt1.ptValue4",
+					"name": "ETH Tank PT",
+					"units": "PSI",
+					"color": [124, 255, 54]
+				},
+				{
+					"field": "pt1.ptValue7",
+					"name": "ETH Tank PT 2",
+					"units": "PSI",
+					"color": [5, 187, 237]
+				},
+				{
+					"field": "pt1.ptValue5",
+					"name": "ETH Fill Line PT",
+					"units": "PSI",
+					"color": [208, 133, 255]
+				}
+			]
+		},
+		{
+			"type": "six-square",
+			"values": [
+				{
+					"field": "pt1.ptValue0@roc", //don't know if works yet 
+					"name": "Nitrous Tank roc",
+					"units": "PSI/s"
+				},
+				{
+					"field": "pt1.ptValue4@roc", //same
+					"name": "Ethane Tank roc",
+					"units": "PSI/s"
+				},
+				{
+					"field": "tc1.tcValue7", //same
+					"name": "Ethane Injector TC",
+					"units": "C"
+				},
+				{
+					"field": "pt1.ptValue0", 
+					"name": "Nitrous Tank PT",
+					"units": "PSI"
+				},
+				{
+					"field": "pt1.ptValue4", 
+					"name": "Ethane Tank PT",
+					"units": "PSI"
+				},
+				{
+					"field": "pt1.ptValue7",
+					"name": "Ethane Tank PT 2",
+					"units": "PSI"
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "lc1.lcValue0",
+				// 	"name": "Nitrous LC 0",
+				// 	"units": "lbs",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "lc1.lcValue1",
+				// 	"name": "Nitrous LC 1",
+				// 	"units": "LB",
+				// 	"color": [0, 255, 0]
+				// }
+				{
+					"field": "pt1.ptValue3",
+					"name": "ETH Injector PT",
+					"units": "PSI",
+					"color": [0, 255, 0]
+				},
+				{
+					"field": "pt1.ptValue6",
+					"name": "ETH Injector PT 2",
+					"units": "PSI",
+					"color": [5, 173, 245]
+				},
+				{
+					"field": "pt1.ptValue6@filtered",
+					"name": "ETH Injector PT 2 Avg",
+					"units": "PSI",
+					"color": [0, 0, 255]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "lc1.lcValue2",
+					"name": "Ethane LC 0",
+					"units": "lbs",
+					"color": [255, 0, 0]
+				},
+				{
+					"field": "lc1.lcValue3",
+					"name": "Ethane LC 1",
+					"units": "LB",
+					"color": [0, 255, 0]
+				}
+			]
+		},
+		// {
+		// 	"type": "four-button",
+		// 	"buttons": [
+		// 		{
+		// 			"id": "autoventThreshold",
+		// 			"type": "ereg-timed",
+		// 			"name": "Autovent Threshold",
+		// 			"field": "",
+		// 			"actions": {
+		// 				"lox-timed": {
+		// 					"type": "signal-timed",
+		// 					"board": "ac2",
+		// 					"packet": 124
+		// 				},
+		// 				"fuel-timed": {
+		// 					"type": "signal-timed",
+		// 					"board": "ac3",
+		// 					"packet": 124
+		// 				}
+		// 			},
+		// 			"safe": true
+		// 		},
+		// 		{
+		// 			"type": null
+		// 		},
+		// 		{
+		// 			"type": null
+		// 		},
+		// 		{
+		// 			"type": null
+		// 		}
+		// 	]
+		// },
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "tc1.tcValue7",
+					"name": "Ethane Injector TC",
+					"units": "C",
+					"color": [50, 255, 100]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "tc1.tcValue1",
+				// 	"name": "Nitrous Tank TC",
+				// 	"units": "C",
+				// 	"color": [255, 0, 0]
+				// },
+				{
+					"field": "tc1.tcValue0",
+					"name": "Ethane Tank TC",
+					"units": "C",
+					"color": [0, 255, 0]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "pt1.ptValue3",
+				// 	"name": "Nitrous Fill PT",
+				// 	"units": "PSI",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "pt1.ptValue0",
+				// 	"name": "Ethane Fill PT",
+				// 	"units": "PSI",
+				// 	"color": [0, 255, 0]
+				// }
+				// {
+				// 	"field": "cap.fuelCapVal",
+				// 	"name": "Nitrous Cap Fill Value",
+				// 	"units": "pF",
+				// 	"color": [255, 0, 0]
+				// },
+				{
+					"field": "cap.loxCapVal",
+					"name": "Ethane Cap Fill Value",
+					"units": "pF",
+					"color": [0, 255, 0]
+				}
+			]
+		},
+		"$components/e_vents.jsonc"
 	]
 }
