--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -5,41 +5,76 @@
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "pt1.ptValue0",
+				// 	"name": "Nitrous Tank PT",
+				// 	"units": "PSI",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "pt1.ptValue1",
+				// 	"name": "Nitrous Fill Line PT",
+				// 	"units": "PSI",
+				// 	"color": [255, 0, 255]
+				// }
 				{
-					"field": "pt1.ptValue0",
-					"name": "Nitrous Tank PT",
+					"field": "pt1.ptValue4@filtered",
+					"name": "ETH Tank PT Avg",
 					"units": "PSI",
-					"color": [255, 0, 0]
+					"color": [2, 173, 128]
 				},
 				{
-					"field": "pt1.ptValue1",
-					"name": "Nitrous Fill Line PT",
+					"field": "pt1.ptValue7@filtered",
+					"name": "ETH Tank PT 2 Avg",
 					"units": "PSI",
-					"color": [255, 0, 255]
+					"color": [2, 76, 235]
+				},
+				{
+					"field": "pt1.ptValue5@filtered",
+					"name": "ETH Fill Line PT Avg",
+					"units": "PSI",
+					"color": [91, 1, 148]
 				}
-		
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
 				// {
-				// 	"field": "pt1.ptValue4",
-				// 	"name": "Ethane Tank PT",
+				// 	"field": "pt1.ptValue4@filtered",
+				// 	"name": "ETH Tank PT Avg",
 				// 	"units": "PSI",
-				// 	"color": [0, 255, 0]
+				// 	"color": [2, 173, 128]
 				// },
 				// {
-				// 	"field": "pt1.ptValue5",
-				// 	"name": "Ethane Fill Line PT",
+				// 	"field": "pt1.ptValue7@filtered",
+				// 	"name": "ETH Tank PT 2 Avg",
 				// 	"units": "PSI",
-				// 	"color": [0, 0, 255]
+				// 	"color": [2, 76, 235]
+				// },
+				// {
+				// 	"field": "pt1.ptValue5@filtered",
+				// 	"name": "ETH Fill Line PT Avg",
+				// 	"units": "PSI",
+				// 	"color": [91, 1, 148]
 				// },
 				{
-					"field": "pt1.ptValue7",
-					"name": "Ethane Tank PT 2",
+					"field": "pt1.ptValue4",
+					"name": "ETH Tank PT",
 					"units": "PSI",
-					"color": [255, 0, 255]
+					"color": [124, 255, 54]
+				},
+				{
+					"field": "pt1.ptValue7",
+					"name": "ETH Tank PT 2",
+					"units": "PSI",
+					"color": [5, 187, 237]
+				},
+				{
+					"field": "pt1.ptValue5",
+					"name": "ETH Fill Line PT",
+					"units": "PSI",
+					"color": [208, 133, 255]
 				}
 			]
 		},
@@ -95,15 +130,21 @@
 				// }
 				{
 					"field": "pt1.ptValue3",
-					"name": "Ethane Injector PT",
+					"name": "ETH Injector PT",
 					"units": "PSI",
 					"color": [0, 255, 0]
 				},
 				{
 					"field": "pt1.ptValue6",
-					"name": "Ethane Injector PT 2",
+					"name": "ETH Injector PT 2",
 					"units": "PSI",
-					"color": [255, 0, 255]
+					"color": [5, 173, 245]
+				},
+				{
+					"field": "pt1.ptValue6@filtered",
+					"name": "ETH Injector PT 2 Avg",
+					"units": "PSI",
+					"color": [0, 0, 255]
 				}
 			]
 		},
