yet another injector pt

--- a/config/preprocessors.jsonc
+++ b/config/preprocessors.jsonc
@@ -64,6 +64,11 @@
 			"suffix": "roc",
 			"func": "roc",
 			"args": []
+		},
+		{
+			"suffix": "filtered",
+			"func": "filtered",
+			"args": []
 		}
 	],
 
