--- a/config/misc_window.jsonc
+++ b/config/misc_window.jsonc
@@ -93,13 +93,13 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "oreg.motorPower",
+					"field": "flightV4.LOXmotorPower",
 					"name": "LOX Motor Power",
 					"units": "%",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "freg.motorPower",
+					"field": "flightV4.FUELmotorPower",
 					"name": "Fuel Motor Power",
 					"units": "%",
 					"color": [0, 255, 0]
@@ -217,6 +217,9 @@
 				}
 			]
 		},
+
+		//Wont do anything
+
 		{
 			"type": "six-square",
 			"values": [
@@ -250,6 +253,10 @@
 				}
 			]
 		},
+
+		//Wont do anything
+
+
 		{
 			"type": "six-square",
 			"values": [
