--- a/config/sensors_window.jsonc
+++ b/config/sensors_window.jsonc
@@ -76,37 +76,37 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "oreg.currentA",
+					"field": "flightV4.LOXcurrentA",
 					"name": "OReg IA",
 					"units": "mA",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "oreg.currentB",
+					"field": "flightV4.LOXcurrentB",
 					"name": "OReg IB",
 					"units": "mA",
 					"color": [0, 255, 0]
 				},
 				{
-					"field": "oreg.currentC",
+					"field": "flightV4.LOXcurrentC",
 					"name": "OReg IC",
 					"units": "mA",
 					"color": [0, 0, 255]
 				},
 				{
-					"field": "freg.currentA",
+					"field": "flightV4.FUELcurrentA",
 					"name": "FReg IA",
 					"units": "mA",
 					"color": [255, 0, 255]
 				},
 				{
-					"field": "freg.currentB",
+					"field": "flightV4.FUELcurrentB",
 					"name": "FReg IB",
 					"units": "mA",
 					"color": [200, 200, 0]
 				},
 				{
-					"field": "freg.currentC",
+					"field": "flightV4.FUELcurrentC",
 					"name": "FReg IC",
 					"units": "mA",
 					"color": [0, 255, 255]
@@ -187,37 +187,37 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "oreg.boardTemp1",
+					"field": "flightV4.LOXboardTemp1",
 					"name": "OReg Temp1",
 					"units": "C",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "oreg.boardTemp2",
+					"field": "flightV4.LOXboardTemp2",
 					"name": "OReg Temp2",
 					"units": "C",
 					"color": [0, 255, 0]
 				},
 				{
-					"field": "oreg.motorTemp",
+					"field": "flightV4.LOXmotorTemp",
 					"name": "OReg Mtr Tmp",
 					"units": "C",
 					"color": [0, 0, 255]
 				},
 				{
-					"field": "freg.boardTemp1",
+					"field": "flightV4.FUELboardTemp1",
 					"name": "FReg Temp1",
 					"units": "C",
 					"color": [255, 0, 255]
 				},
 				{
-					"field": "freg.boardTemp2",
+					"field": "flightV4.FUELboardTemp2",
 					"name": "FReg Temp2",
 					"units": "C",
 					"color": [200, 200, 0]
 				},
 				{
-					"field": "freg.motorTemp",
+					"field": "flightV4.FUELmotorTemp",
 					"name": "FReg Mtr Tmp",
 					"units": "C",
 					"color": [0, 255, 255]
