--- a/config/misc_window.jsonc
+++ b/config/misc_window.jsonc
@@ -79,13 +79,13 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "flightV4.LOXmotorPower",
+					"field": "oreg.motorPower",
 					"name": "LOX Motor Power",
 					"units": "%",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "flightV4.FUELmotorPower",
+					"field": "freg.motorPower",
 					"name": "Fuel Motor Power",
 					"units": "%",
 					"color": [0, 255, 0]
@@ -210,30 +210,30 @@
 			"type": "six-square",
 			"values": [
 				{
-					"field": "flightV4.LOXavgCurrent",
+					"field": "oreg.avgCurrent",
 					"name": "O OC Avg",
 					"units": "mA"
 				},
 				{
-					"field": "flightV4.loxAutoventPressure",
+					"field": "oreg.AutoventPressure",
 					"name": "O Autovent"
 				},
 				{
-					"field": "flightV4.LOXbufferSize",
+					"field": "oreg.bufferSize",
 					"name": "O OC Buffer",
 					"units": ""
 				},
 				{
-					"field": "flightV4.FUELavgCurrent",
+					"field": "freg.avgCurrent",
 					"name": "F OC Avg",
 					"units": "mA"
 				},
 				{
-					"field": "flightV4.fuelAutoventPressure",
+					"field": "freg.AutoventPressure",
 					"name": "F Autovent"
 				},
 				{
-					"field": "flightV4.FUELbufferSize",
+					"field": "freg.bufferSize",
 					"name": "F OC Buffer",
 					"units": ""
 				}
@@ -247,32 +247,32 @@
 			"type": "six-square",
 			"values": [
 				{
-					"field": "flightV4.LOXpressureSetpointConfig",
+					"field": "oreg.pressureSetpointConfig",
 					"name": "LOX Setpoint",
 					"units": "PSI"
 				},
 				{
-					"field": "flightV4.FUELpressureSetpointConfig",
+					"field": "freg.pressureSetpointConfig",
 					"name": "Fuel Setpoint",
 					"units": "PSI"
 				},
 				{
-					"field": "flightV4.LOXflowDuration",
+					"field": "oreg.flowDuration",
 					"name": "Burn Time (O-Reg)",
 					"units": "s"
 				},
 				{
-					"field": "flightV4.LOXfullyClosedSwitch",
+					"field": "oreg.fullyClosedSwitch",
 					"name": "LOX Closed Switch",
 					"units": ""
 				},
 				{
-					"field": "flightV4.FUELfullyClosedSwitch",
+					"field": "freg.fullyClosedSwitch",
 					"name": "Fuel Closed Switch",
 					"units": ""
 				},
 				{
-					"field": "flightV4.FUELflowDuration",
+					"field": "freg.flowDuration",
 					"name": "Burn Time (F-Reg)",
 					"units": "s"
 				}
